edited tsconfig.js to solve a deployment problem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src", "vite.config.ts"],
+  // "include": ["src", "vite.config.ts"],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.node.json"
