--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
       "@/*": ["./*"]
     }
   },
-  // "include": ["src", "vite.config.ts"],
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
